--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
     
 }
 form{
-    background: #eee;
+    background: #fff;
     display:flex;
     flex-direction: column;
     padding:2vw 4vw;
