--- a/style.css
+++ b/style.css
@@ -76,6 +76,7 @@ form{
     box-shadow: 0 1px 0 2px rgba(0, 0, 0, 0.3);
     position: absolute; 
     inset: 2px;
+    z-index:10;
 }
 form input,form textarea{
     border:0;
